syntax = "proto3";

package todo;

message Empty {}

message TodoItem {
  int64 id = 1;
  string description = 2;
  bool done = 3;
}

message TodoList {
  repeated TodoItem list = 1;
}

message AddTodoRequest {
  string description = 1;
}

message AddTodoResponse {
  int64 id = 1;
}

message CompleteTodoRequest {
  int64 id = 1;
}

message CompleteTodoResponse {
  bool completed = 1;
}

service Todo {
  rpc GetTodoList(Empty) returns (TodoList);
  rpc AddTodoItem(AddTodoRequest) returns (AddTodoResponse);
  rpc CompleteTodo(CompleteTodoRequest) returns (CompleteTodoResponse);
}